fixed jumping bug and cleaned up

--- a/app/pages/App/app.scss
+++ b/app/pages/App/app.scss
@@ -67,59 +67,4 @@
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
     padding: 0 !important;
   }
-
-  &__splash {
-      @extend %col-nowrap;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-
-    &__title {
-      font-size: 2rem;
-      font-weight: 600;
-      text-transform: capitalize;
-    }
-
-    &__text{
-      @extend %h3;
-      color: $manatee-gray;
-    }
-
-    &__logo {
-       &__wrapper {
-         @extend %row-nowrap;
-         justify-content: center;
-         align-items: baseline;
-         margin: 3rem 0;
-       }
-
-      &__alice {
-        background-image: url('../../assets/images/alice.png');
-        height: 219px;
-        width: 130px;
-        background-size: cover;
-        background-position: center;
-        animation: 0.5s ease-in-out;
-      }
-  
-      &__bob {
-        background-image: url('../../assets/images/the-cat.png');
-        height: 109px;
-        width: 75px;
-        background-size: cover;
-        background-position: center;
-        animation: 0.5s ease-in-out;
-      }
-  
-      &__spinner {
-        background-image: url('../../assets/images/brick-loader.svg');
-        margin-bottom: 15px;
-        height: 1.5rem;
-        width: 1.5rem;
-        background-size: cover;
-        background-position: center;
-      }
-    }
-    
-  }
 }
